--- a/ui/examples/navs.html
+++ b/ui/examples/navs.html
@@ -30,92 +30,47 @@
         <main class="main-nav" v-if="visible">
 
             <section class="nav-v">
-                <h1 class="title">{{message}}</h1>
+                <h1 class="title">TITLE</h1>
                 <nav>
-                    <a class="btn active" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo2</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
-                    <a class="btn" href="#index">Ejempo</a>
+                    <a class="btn active" href="#index">Example</a>
+                    <a class="btn" href="#index">Example2</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
+                    <a class="btn" href="#index">Example</a>
                 </nav>
             </section>
 
-            <section class="container paper">
-                <article id="index">
-                    
-                    <header>
-                        <h1>PAPER 1</h1>
-                    </header>
-
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        <br><br>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        <br><br>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores!
-                        <br><br>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        <br><br>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        <br><br>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae. 
-                        Odio nobis explicabo fugiat alias nemo atque recusandae sint quaerat tempore officiis, vero repudiandae.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore velit fuga minus debitis dignissimos neque dolores! 
-                    </p>
-
-                    <footer>
-                        <p>Firmado: Guanche</p>
-                        <nav class="nav-h j-c-center">
-                            <a  class="btn" href="#"><i class="fa-solid fa-trash-can"></i></a>
-                            <a  class="btn" href="#"><i class="fa-solid fa-feather-pointed"></i></a>
-                            <a  class="btn" href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-                            <a  class="btn" href="#"><i class="fa-solid fa-comments"></i></a>
-                        </nav>
-                    </footer>
-
-                </article>
+            <section class="container">
+                <nav class="nav-h j-c-center a-i-end ">
+                    <a  class="btn" href="#"><i class="fa-solid fa-trash-can"></i></a>
+                    <a  class="btn" href="#"><i class="fa-solid fa-feather-pointed"></i></a>
+                    <a  class="btn" href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                    <a  class="btn" href="#"><i class="fa-solid fa-comments"></i></a>
+                </nav>
             </section>
 
         </main>
