--- a/ui/examples/notifications.html
+++ b/ui/examples/notifications.html
@@ -41,14 +41,14 @@
                         <!--
                             EN: Use this url format for the plugin.
                             ES: Use este formato de url para el plugin.
-
+    
                             <img src="nui://vorp_fwui/ui/assets/img/logo.webp" alt="Logo"> 
                         -->
                         <img src="../assets/img/logo.webp" alt="Logo"> 
                         VALENTINE
                         <img src="../assets/img/logo.webp" alt="Logo"> 
                     </h1>
-                    <p class="region">REGIÓN</p>
+                    <p class="district">Distrito</p>
                     <div>
                         <h2>Valentine</h2>
                         <span>10:00 AM - 20ºC</span>
