--- a/ui/index.html
+++ b/ui/index.html
@@ -33,11 +33,11 @@
 
             <nav class="nav-loop">
                 <a href="./examples/ui-game.html" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
+                    <i class="fa-solid fa-display"></i>
                     <span>UI Game</span>
                 </a>
                 <a href="./examples/navs.html" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
+                    <i class="fa-solid fa-rectangle-list"></i>
                     <span>Navs</span>
                 </a>
                 <a href="./examples/paper.html" class="btn">
@@ -45,11 +45,11 @@
                     <span>Paper</span>
                 </a>
                 <a href="./examples/ui-statistics.html" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
+                    <i class="fa-solid fa-chart-pie"></i>
                     <span>UI Statistics</span>
                 </a>
                 <a href="./examples/notifications.html" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
+                    <i class="fa-solid fa-bell"></i>
                     <span>Notifications</span>
                 </a>
                 <a href="./examples/accordion.html" class="btn">
@@ -60,21 +60,9 @@
                     <i class="fa-solid fa-file-lines"></i>
                     <span>Form</span>
                 </a>
-                <a href="" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
-                    <span>TEXTO</span>
-                </a>
-                <a href="" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
-                    <span>TEXTO</span>
-                </a>
-                <a href="" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
-                    <span>TEXTO</span>
-                </a>
-                <a href="" class="btn">
-                    <i class="fa-solid fa-file-lines"></i>
-                    <span>TEXTO</span>
+                <a href="./examples/mail.html" class="btn">
+                    <i class="fa-solid fa-envelope"></i>
+                    <span>Mail box</span>
                 </a>
             </nav>
 
