--- a/ui_plugins/ui_vorp_zonenotify/index.html
+++ b/ui_plugins/ui_vorp_zonenotify/index.html
@@ -2,9 +2,26 @@
 <html>
 
     <head>
+
+        <title> Guanche UI for VORP Zone Notify </title>
+
+        <!--
+            EN: Do not use these links in your plugins. Unless you want to develop using a web browser as a view.
+            ES: No use estos enlaces en su plugins. A no ser que quiera desarrollar usando como vista un navegador web
+       
+            <link rel="stylesheet" type="text/css" href="../../../[vorp_essentials]/vorp_fwui/ui/config.css">
+            <link rel="stylesheet" type="text/css" href="../../../[vorp_essentials]/vorp_fwui/ui/style.css">
+            <link rel="stylesheet" type="text/css" href="../../../[vorp_essentials]/vorp_fwui/ui/class.css">
+        -->
+
+        <!--
+            EN: Original links that you should use in your plugins.
+            ES: Enlaces originales que debe usar en su plugins.
+        -->
         <link rel="stylesheet" type="text/css" href="nui://vorp_fwui/ui/config.css">
         <link rel="stylesheet" type="text/css" href="nui://vorp_fwui/ui/fw/css/style.css">
         <link rel="stylesheet" type="text/css" href="nui://vorp_fwui/ui/fw/css/class.css">
+
     </head>
 
     <body id="app">
@@ -25,6 +42,7 @@
 
         </main>
     </body>
+    
 </html>
 
 <script src="https://unpkg.com/vue@3.1.1/dist/vue.global.prod.js"></script>
