--- a/ui/examples/ui-game.html
+++ b/ui/examples/ui-game.html
@@ -55,7 +55,7 @@
                     </div>
                 </section>
 
-                <section class="statistics j-c-center a-i-end">
+                <section class="statistics">
                     <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:85">
                         <i class="fa-solid fa-heart-pulse"></i>
                     </div>
