--- a/ui/examples/ui-statistics.html
+++ b/ui/examples/ui-statistics.html
@@ -29,7 +29,7 @@
     <body id="app" class="developer-web">
         <main class="" v-if="visible">
 
-            <section class="statistics j-c-center a-i-end">
+            <section class="statistics">
                 <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:85">
                     <i class="fa-solid fa-heart-pulse"></i>
                 </div>
