--- a/ui/examples/accordion.html
+++ b/ui/examples/accordion.html
@@ -27,7 +27,7 @@
         ES: La clase developer-web no la uses en tus plugins a no ser que este desarrollando usando como vista un navegador. 
     -->
     <body id="app"  class="developer-web">
-        <main class="main-center" v-if="visible">
+        <main class="main" v-if="visible">
 
             <div class="accordion-main">
                 <div class="accordion-item img-bg">
