--- a/ui/examples/nav-vertical.html
+++ b/ui/examples/nav-vertical.html
@@ -27,9 +27,9 @@
         ES: La clase developer-web no la uses en tus plugins a no ser que este desarrollando usando como vista un navegador. 
     -->
     <body id="app"  class="developer-web">
-        <main class="main-nav" v-if="visible">
+        <main class="main" v-if="visible">
 
-            <section class="nav-v">
+            <section class="nav-v j-s-start" style="min-width: 350px;">
                 <h1 class="title">TITLE</h1>
                 <nav>
                     <a class="btn active" href="#index">Example</a>
@@ -61,15 +61,6 @@
                     <a class="btn" href="#index">Example</a>
                     <a class="btn" href="#index">Example</a>
                     <a class="btn" href="#index">Example</a>
-                </nav>
-            </section>
-
-            <section class="container">
-                <nav class="nav-h j-c-center a-i-end ">
-                    <a  class="btn" href="#"><i class="fa-solid fa-trash-can"></i></a>
-                    <a  class="btn" href="#"><i class="fa-solid fa-feather-pointed"></i></a>
-                    <a  class="btn" href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-                    <a  class="btn" href="#"><i class="fa-solid fa-comments"></i></a>
                 </nav>
             </section>
 
