--- a/ui/examples/paper.html
+++ b/ui/examples/paper.html
@@ -27,7 +27,7 @@
         ES: La clase developer-web no la uses en tus plugins a no ser que este desarrollando usando como vista un navegador. 
     -->
     <body id="app" class="developer-web">
-        <main class="" v-if="visible">
+        <main class="main" v-if="visible">
 
             <section class="container paper">
                 <article id="index">
