--- a/ui_plugins/ui_vorp_zonenotify/index.html
+++ b/ui_plugins/ui_vorp_zonenotify/index.html
@@ -25,9 +25,9 @@
     </head>
 
     <body id="app">
-        <main v-if="visible">
+        <main class="main" v-if="visible">
 
-            <section class="notification-zone img-bg">  
+            <section class="zonenotify">  
                 <h1 class="title">
                     <img src="nui://vorp_fwui/ui/assets/img/logo.webp" alt="Logo"> 
                     {{title}}
