--- a/ui/index.html
+++ b/ui/index.html
@@ -32,13 +32,13 @@
         <main class="main" v-if="visible">
 
             <nav class="nav-loop">
-                <a href="./examples/ui-game.html" class="btn">
-                    <i class="fa-solid fa-display"></i>
-                    <span>UI Game</span>
-                </a>
-                <a href="./examples/navs.html" class="btn">
+                <a href="./examples/nav-horizontal.html" class="btn">
                     <i class="fa-solid fa-rectangle-list"></i>
-                    <span>Navs</span>
+                    <span>Navs Horizontal</span>
+                </a>
+                <a href="./examples/nav-vertical.html" class="btn">
+                    <i class="fa-solid fa-rectangle-list"></i>
+                    <span>Navs vertical</span>
                 </a>
                 <a href="./examples/paper.html" class="btn">
                     <i class="fa-solid fa-file-lines"></i>
@@ -48,9 +48,17 @@
                     <i class="fa-solid fa-chart-pie"></i>
                     <span>UI Statistics</span>
                 </a>
-                <a href="./examples/notifications.html" class="btn">
+                <a href="./examples/notifications-info.html" class="btn">
                     <i class="fa-solid fa-bell"></i>
-                    <span>Notifications</span>
+                    <span>Notifications Info</span>
+                </a>
+                <a href="./examples/notifications-item.html" class="btn">
+                    <i class="fa-solid fa-bell"></i>
+                    <span>Notifications Item</span>
+                </a>
+                <a href="./examples/zonenotify.html" class="btn">
+                    <i class="fa-solid fa-bell"></i>
+                    <span>Zone notify</span>
                 </a>
                 <a href="./examples/accordion.html" class="btn">
                     <i class="fa-solid fa-file-lines"></i>
