--- a/ui/index.html
+++ b/ui/index.html
@@ -72,6 +72,10 @@
                     <i class="fa-solid fa-envelope"></i>
                     <span>Mail box</span>
                 </a>
+                <a href="./examples/wanted.html" class="btn">
+                    <i class="fa-solid fa-dollar-sign"></i>
+                    <span>Wanted</span>
+                </a>
             </nav>
 
         </main>
